fix color on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -382,6 +382,7 @@ hr{
     .reaction{
         letter-spacing: 0px;
         margin-left: 0px;
+        color: #8a8a8a;
     }
     
 }
